# remage_runtime_test_env

./: .gitignore  README.md  plotter.ipynb  pyproject.toml  setup.sh  sim_runner.py
geoms/: lar_world_volume.gdml
misc/: multithreaded_speedup_plotter.ipynb
src/remage_runtime_tests/: __init__.py  cli.py  config.py  plotting.py  simulation.py  submission.py
templates/: config.json  config_example.json  l200_electron.mac  simple_electron.mac  simple_gamma.mac  test_new_placeholders.mac
tests/: temp.mac
