[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remage-runtime-tests"
version = "0.1.0"
description = "Runtime testing suite for REMAGE simulations"
authors = [
    {name = "Moritz Neuberger", email = "moritz.neuberger@tum.de"},
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "tqdm",
    "awkward",
    "seaborn",
]
requires-python = ">=3.8"

[project.scripts]
rrt-run = "remage_runtime_tests.cli:run_simulation"
rrt-submit = "remage_runtime_tests.cli:submit_jobs"
rrt-collect = "remage_runtime_tests.cli:collect_results"
rrt-plot = "remage_runtime_tests.cli:plot_results"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
